feat(home): Displays daily goal progress
Implements the display of daily goal progress on the home screen.

Includes progress bar, goal completion status, and integrates
with i18n for localization.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -5,6 +5,7 @@
     "streak": "{{count}}-day streak",
     "dueInfo": "{{count}} cards · ~{{minutes}} min",
     "todayReview": "Today's Review Mix",
+    "dailyGoal": "Today's Goal",
     "startReview": "Start Review →",
     "addCards": "Add New Cards →",
     "levelPractice": "Practice by Level",
