Feature: Implement smart level recommendation and revamp DailyReviewCard

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -5,9 +5,17 @@
     "streak": "{{count}}-day streak",
     "dueInfo": "{{count}} cards · ~{{minutes}} min",
     "todayReview": "Today's Review Mix",
+    "recommendedLevel": "{{level}} {{count}} cards",
+    "startWithLevel": "Start with: {{level}}",
     "dailyGoal": "Today's Goal",
     "startReview": "Start Review →",
     "addCards": "Add New Cards →",
+    "firstTimeTitle": "Ready to master the fretboard? 🎸",
+    "firstTimeDesc": "Practice a little each day and you'll memorize every note on the fretboard.",
+    "firstTimeCta": "Start First Lesson",
+    "reviewDone": "Today's Review Done! 🎉",
+    "reviewDoneDesc": "Great work! Learn new cards to build up tomorrow's review.",
+    "learnNew": "Learn New Cards",
     "levelPractice": "Practice by Level",
     "practiceShortcut": "Practice Specific Level →",
     "locked": "Locked",
