--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -5,9 +5,17 @@
     "streak": "{{count}}일 연속",
     "dueInfo": "{{count}}장 · 약 {{minutes}}분",
     "todayReview": "오늘의 복습 믹스",
+    "recommendedLevel": "{{level}} {{count}}장",
+    "startWithLevel": "시작하기: {{level}}",
     "dailyGoal": "오늘의 목표",
     "startReview": "복습 시작 →",
     "addCards": "새 카드 추가하기 →",
+    "firstTimeTitle": "프렛보드를 정복해볼까요? 🎸",
+    "firstTimeDesc": "매일 조금씩 연습하면 프렛보드의 모든 음을 외울 수 있어요.",
+    "firstTimeCta": "첫 학습 시작하기",
+    "reviewDone": "오늘 복습 완료! 🎉",
+    "reviewDoneDesc": "수고했어요! 새로운 카드를 배워서 내일 복습할 카드를 늘려보세요.",
+    "learnNew": "새로운 카드 배우기",
     "levelPractice": "레벨별 연습",
     "practiceShortcut": "특정 레벨만 연습하기 →",
     "locked": "잠김",
