feat(quiz): Adds mixed practice mode
Introduces a mixed practice mode, combining
various quiz types (note, interval, scale, ear).

Refactors practice screen to navigate to the
new mixed mode.

Improves audio handling in ear training.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,7 @@
   },
   "practice": {
     "title": "Practice",
-    "subtitle": "Select a level and start practicing",
+    "subtitle": "Select a track and start practicing",
     "basicMode": "Basic Mode",
     "exampleProblem": "Example Problem",
     "sessions": {
@@ -31,7 +31,7 @@
       "deep": "Deep 20min",
       "cardsCount": "{{count}} cards"
     },
-    "mixMode": "🎲 All Levels Mix",
+    "mixMode": "🎲 All Tracks Mix",
     "confirm": "OK"
   },
   "mastery": {
